# rentbot_sslv

./: .gitignore  Cargo.toml  build_deploy.sh  rentbot_sslv.service  ss.md
src/: apartment.rs  config.rs  db.rs  error.rs  lib.rs  main.rs  page_handler.rs
src/db/: record.rs  utils.rs
