[package]
name = "rent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.0"
regex = "1.8.1"
reqwest = { version = "0.11.16", features = ["blocking", "cookies"] }
scraper = "0.16.0"
serde_urlencoded = "0.7.1"
unescape = "0.1.0"
urlencoding = "2.1.2"
